--- a/src/components/LoadingBar.css
+++ b/src/components/LoadingBar.css
@@ -9,13 +9,21 @@
   .loading-bar-container {
     width: 10%;
     height: 10px;
-    background-color: #f0f0f0;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 999px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .loading-bar-container {
+      width: 20%;
+    }
   }
   
   .loading-bar {
     height: 100%;
     border-radius: 9999;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: 999px;
     animation: progress 0.5s linear infinite; /* Animation to move the loading bar */
   }
   
