--- a/src/Game.css
+++ b/src/Game.css
@@ -11,6 +11,18 @@ h1 {
     text-align: left;
 }
 
+.welcome-stage {
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .fade-in {
+    opacity: 1;
+  }
+  
+  .fade-out {
+    opacity: 0;
+  }
+
 .bold {
     font-weight: bold;
 }
