--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -21,13 +21,12 @@
 }
 
 .modal {
-    position: relative; /* Ensure relative positioning for absolute positioning of close button */
+    position: relative;
     background-color: white;
-    width: 400px; /* Adjust width as needed */
+    width: 400px;
     padding: 44px 64px;
     border-radius: 4px;
-    box-shadow: 0 3px 12px -1px rgba(0,0,0,.3); /* Add shadow */
-    /* Animation styles */
+    box-shadow: 0 3px 12px -1px rgba(0,0,0,.3);
     animation-name: slideIn;
     animation-duration: 0.25s;
     animation-timing-function: ease-in-out;
@@ -38,4 +37,33 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+    .modal {
+        width: 400px; /* Adjust width as needed */
+    }
+}
+
+@media (max-width: 600px) {
+    .modal {
+        width: calc(100% - 20px); /* Screen width minus padding */
+        max-width: 600px; /* Maximum width */
+        padding: 20px; /* Adjust padding as needed */
+        bottom: 0;
+        top: unset;
+        left: 10px;
+        right: 10px;
+        margin: auto;
+    }
+
+    .modal-overlay {
+        align-items: flex-end; /* Align modal to bottom of screen */
+    }
+}
+
+@media (min-width: 901px) {
+    .modal {
+        width: 600px; /* Adjust width as needed */
+    }
 }
