add screenreader roles and aria + alert for copy to clipboard

--- a/src/components/Toolbar.css
+++ b/src/components/Toolbar.css
@@ -3,6 +3,11 @@
     padding-right: 20px;
 }
 
+.toolbar-button {
+    background: none;
+    border: none;
+}
+
 hr {
     margin: 0 0 2px;
     color: gray;
