--- a/client/src/components/Create.css
+++ b/client/src/components/Create.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+#game-name-input {
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+}
