modify create flow to provide option to go to the new game

--- a/client/src/components/Alert.css
+++ b/client/src/components/Alert.css
@@ -7,7 +7,7 @@
     color: white;
     padding: 10px 20px;
     border-radius: 2px;
-    z-index: 999; /* above other content, except modal */
+    z-index: 1000; /* above other content */
 }
 
 .fade {
